--- a/dashboard.html
+++ b/dashboard.html
@@ -1,21 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Dashboard – Quizera</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header class="nav">
-    <h2>Quizera Dashboard</h2>
-    <button onclick="logout()">Logout</button>
-  </header>
-
-  <section class="dashboard">
-    <a href="game/host.html" class="card-btn">🎮 Host Game</a>
-    <a href="game/join.html" class="card-btn">🔑 Join Game</a>
-  </section>
-
-  <script src="dashboard.js"></script>
-  <script src="logout.js"></script>
-</body>
-</html>
+<h1>Qbits Dashboard</h1>
+<a href="game/host.html">Host Game</a>
+<a href="game/join.html">Join Game</a>
+<a href="shop.html">Shop</a>
+<script type="module" src="dashboard.js"></script>
