--- a/game/join.html
+++ b/game/join.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Join Game</title>
-  <link rel="stylesheet" href="game.css">
-</head>
-<body>
-  <input id="code" placeholder="Game Code">
-  <button onclick="join()">Join</button>
-
-  <script>
-    function join() {
-      window.location = "play.html";
-    }
-  </script>
-</body>
-</html>
+<input id="code"><button onclick="join()">Join</button>
+<script>
+function join(){location='play.html?code='+code.value}
+</script>
