Update title and headings in index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Quizera</title>
+  <title>Qbits</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="nav">
-    <h1>Quizera</h1>
+    <h1>Qbits</h1>
     <div>
       <a href="login.html">Login</a>
       <a href="signup.html" class="btn">Sign Up</a>
@@ -15,8 +14,8 @@
   </header>
 
   <section class="hero">
-    <h2>Learning, but actually fun.</h2>
-    <p>Create and play live quiz games like Kahoot & Blooket.</p>
+    <h2>Learn. Play. Win.</h2>
+    <p>Qbits is a live quiz game platform.</p>
     <a href="signup.html" class="btn big">Get Started</a>
   </section>
 </body>
