--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sign Up – Quizera</title>
+  <title>Sign Up – Qbits</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="center">
