--- a/index.html
+++ b/index.html
@@ -1,22 +1,132 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Qbits</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Qbits — Learning, but actually fun</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
+
+  <!-- NAVBAR -->
   <header class="nav">
-    <h1>Qbits</h1>
-    <div>
+    <div class="nav-left">
+      <h1 class="logo">Qbits</h1>
+    </div>
+
+    <nav class="nav-right">
+      <a href="#features">Features</a>
+      <a href="#how">How It Works</a>
       <a href="login.html">Login</a>
       <a href="signup.html" class="btn">Sign Up</a>
-    </div>
+    </nav>
   </header>
 
+  <!-- HERO -->
   <section class="hero">
-    <h2>Learn. Play. Win.</h2>
-    <p>Qbits is a live quiz game platform.</p>
-    <a href="signup.html" class="btn big">Get Started</a>
+    <div class="hero-content">
+      <h2>Learning, but actually fun.</h2>
+      <p>
+        Qbits turns quizzes into fast-paced, competitive games that students
+        actually want to play.
+      </p>
+
+      <div class="hero-buttons">
+        <a href="signup.html" class="btn big">Get Started Free</a>
+        <a href="#how" class="btn outline big">See How It Works</a>
+      </div>
+    </div>
   </section>
+
+  <!-- FEATURES -->
+  <section class="features" id="features">
+    <h3>Why Qbits?</h3>
+
+    <div class="feature-grid">
+      <div class="feature-card">
+        <h4>🎮 Game-Based Learning</h4>
+        <p>
+          Play live games or solo challenges that keep learning exciting
+          instead of boring.
+        </p>
+      </div>
+
+      <div class="feature-card">
+        <h4>⚡ Fast & Competitive</h4>
+        <p>
+          Earn points, streaks, and rewards while racing against classmates
+          or friends.
+        </p>
+      </div>
+
+      <div class="feature-card">
+        <h4>🧠 Smart Questions</h4>
+        <p>
+          Create custom question sets or use pre-made ones for any subject.
+        </p>
+      </div>
+
+      <div class="feature-card">
+        <h4>🛒 Power-Ups & Shop</h4>
+        <p>
+          Spend points on boosts, upgrades, and fun in-game abilities.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- HOW IT WORKS -->
+  <section class="how" id="how">
+    <h3>How Qbits Works</h3>
+
+    <div class="steps">
+      <div class="step">
+        <span>1</span>
+        <h4>Create or Join a Game</h4>
+        <p>Start a live game or jump into one with a code.</p>
+      </div>
+
+      <div class="step">
+        <span>2</span>
+        <h4>Answer Questions</h4>
+        <p>Answer correctly to earn points and build streaks.</p>
+      </div>
+
+      <div class="step">
+        <span>3</span>
+        <h4>Use Power-Ups</h4>
+        <p>Buy boosts to gain advantages and climb the leaderboard.</p>
+      </div>
+
+      <div class="step">
+        <span>4</span>
+        <h4>Win & Learn</h4>
+        <p>Compete, improve, and actually remember what you learned.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <section class="cta">
+    <h3>Ready to make learning fun?</h3>
+    <p>Create your free Qbits account and start playing today.</p>
+    <a href="signup.html" class="btn big">Start Playing</a>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="footer-left">
+      <h4>Qbits</h4>
+      <p>© 2025 Qbits. All rights reserved.</p>
+    </div>
+
+    <div class="footer-right">
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <a href="#">Contact</a>
+    </div>
+  </footer>
+
 </body>
 </html>
